--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/question
-spring.datasource.username = root
-spring.datasource.password = atkj12345??
+spring.datasource.username = "keep your username"
+spring.datasource.password = "keep your password"
 
 # Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
